--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "chalk": "^2.1.0",
     "commander": "^2.11.0",
+    "fs-extra": "^4.0.1",
     "react-dev-utils": "^3.1.1"
   },
   "devDependencies": {
