--- a/packages/ayano-script/package.json
+++ b/packages/ayano-script/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ayano-script",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "a command to create react app",
   "scripts": {
     "build": "babel src -d lib --presets=es2015",
@@ -29,6 +29,7 @@
     "postcss-pxtorem": "^4.0.1",
     "react-dev-utils": "^3.1.1",
     "react-error-overlay": "^1.0.10",
+    "sakura-webpack-plugin": "^0.0.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "svg-sprite-loader": "^3.2.3",
