--- a/packages/ayano-script/package.json
+++ b/packages/ayano-script/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ayano-script",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "a command to create react app",
   "scripts": {
     "build": "babel src -d lib --presets=es2015",
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "antd-mobile": "^1.6.3",
+    "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-import": "^1.4.0",
     "babel-preset-es2015": "^6.24.1",
