add base constructor

--- a/example/package.json
+++ b/example/package.json
@@ -11,5 +11,13 @@
     "start": "ayano-script start",
     "build": "ayano-script build",
     "publish": "ayano-script publish"
+  },
+  "devDependencies": {
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.6",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   }
 }
