--- a/example/package.json
+++ b/example/package.json
@@ -13,13 +13,6 @@
     "publish": "ayano-script publish"
   },
   "devDependencies": {
-    "axios": "^0.16.2",
-    "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-router-redux": "^5.0.0-alpha.6",
-    "redux": "^3.7.2",
-    "redux-devtools-extension": "^2.13.2",
-    "redux-thunk": "^2.2.0"
+    "ayano-react": "^0.1.1"
   }
 }
