--- a/packages/ayano-react/package.json
+++ b/packages/ayano-react/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/guoshencheng/ayano/packages/ayano-react"
+    "url": "https://github.com/guoshencheng/ayano"
   },
   "keywords": [
     "ayano",
