--- a/packages/ayano-script/package.json
+++ b/packages/ayano-script/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "antd-mobile": "^1.6.3",
+    "axios": "^0.16.2",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-import": "^1.4.0",
@@ -30,10 +31,10 @@
     "postcss-pxtorem": "^4.0.1",
     "react-dev-utils": "^3.1.1",
     "react-error-overlay": "^1.0.10",
-    "sakura-webpack-plugin": "^0.0.3",
+    "sakura-webpack-plugin": "^0.0.5",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
-    "svg-sprite-loader": "^3.2.3",
+    "svg-sprite-loader": "^0.3.1",
     "url-loader": "^0.5.9",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
