--- a/packages/ayano/package.json
+++ b/packages/ayano/package.json
@@ -13,6 +13,7 @@
   "author": "century guo",
   "license": "MIT",
   "dependencies": {
+    "ayano-utils": "^1.0.0",
     "chalk": "^2.1.0",
     "commander": "^2.11.0",
     "react-dev-utils": "^3.1.1"
