--- a/packages/ayano-script/package.json
+++ b/packages/ayano-script/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ayano-script",
-  "version": "0.1.15",
+  "version": "1.0.0-alpha1",
   "description": "a command to create react app",
   "scripts": {
     "build": "babel src -d lib --presets=es2015",
