update react version

--- a/packages/ayano-react/package.json
+++ b/packages/ayano-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ayano-react",
-  "version": "0.1.10",
+  "version": "1.0.0-alpha1",
   "description": "react app creator",
   "main": "dist/index.js",
   "scripts": {
