--- a/packages/ayano-react/package.json
+++ b/packages/ayano-react/package.json
@@ -5,8 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src -d dist --presets=es2015,react",
-    "dev": "babel src -d dist --presets=es2015,react -w",
+    "build": "babel src -d dist",
+    "dev": "babel src -d dist -w",
     "prepublish": "npm run build"
   },
   "repository": {
@@ -32,7 +32,9 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1"
   }
 }
