--- a/packages/ayano-react/package.json
+++ b/packages/ayano-react/package.json
@@ -22,19 +22,27 @@
   "dependencies": {
     "axios": "^0.16.2",
     "ayano-utils": "^1.0.3",
+    "hoist-non-react-statics": "^2.3.1",
+    "path-to-regexp": "^2.1.0",
+    "prop-types": "^15.6.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.7.2",
-    "redux-devtools-extension": "^2.13.2",
-    "redux-thunk": "^2.2.0"
+    "redux-devtools-extension": "^2.13.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1"
+    "babel-preset-stage-0": "^6.24.1",
+    "node-sass": "^4.7.2",
+    "parcel-bundler": "^1.4.1"
+  },
+  "peerDependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   }
 }
