--- a/packages/ayano-script/package.json
+++ b/packages/ayano-script/package.json
@@ -13,7 +13,6 @@
   "author": "century guo",
   "license": "MIT",
   "dependencies": {
-    "antd-mobile": "^1.6.3",
     "axios": "^0.16.2",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -26,18 +25,19 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "fs-extra": "^4.0.1",
-    "node-sass": "^4.5.3",
+    "gulp": "^3.9.1",
+    "gulp-qiniu": "^0.2.4",
+    "path-to-regexp": "^1.7.0",
     "postcss-loader": "^2.0.6",
-    "postcss-pxtorem": "^4.0.1",
     "react-dev-utils": "^3.1.1",
     "react-error-overlay": "^1.0.10",
+    "react-hot-loader": "^3.1.3",
     "sakura-webpack-plugin": "^0.0.5",
-    "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
-    "svg-sprite-loader": "^0.3.1",
     "url-loader": "^0.5.9",
-    "webpack": "^3.5.5",
-    "webpack-dev-server": "^2.7.1"
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.7",
+    "webpack-hot-middleware": "^2.20.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0"
