--- a/packages/ayano-script/package.json
+++ b/packages/ayano-script/package.json
@@ -1,11 +1,15 @@
 {
   "name": "ayano-script",
-  "version": "1.0.0-alpha1",
+  "version": "1.0.0-alpha2",
   "description": "a command to create react app",
   "scripts": {
     "build": "babel src -d lib --presets=es2015",
     "dev": "babel src -d lib --presets=es2015 -w",
+    "pub": "gulp pub",
     "prepublish": "npm run build"
+  },
+  "related": {
+    "ayano-react": "next"
   },
   "bin": "bin/index.js",
   "main": "bin/index.js",
@@ -14,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.16.2",
+    "ayano-utils": "^1.0.7",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-import": "^1.4.0",
