--- a/example/package.json
+++ b/example/package.json
@@ -1,30 +1,24 @@
 {
   "name": "example",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "ayano-react": "^0.1.10",
-    "ayano-script": "^0.1.15",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "antd-mobile": "^2.1.3",
+    "ayano-react": "^1.0.0",
+    "ayano-script": "^1.0.0-alpha3",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   },
   "scripts": {
     "start": "ayano-script start",
     "build": "ayano-script build",
-    "publish": "ayano-script publish"
+    "publish": "ayano-script publish -m 'upload new version'",
+    "upload": "ayano-script upload"
   },
-  "ayano-config": {
-    "resourcePrefix": "https://dn-mhc.qbox.me/faw/js/",
-    "resourceDescribeFileName": "resources.json",
-    "antd": [
-      "antd-mobile"
-    ]
-  },
-  "ayano-publish-config": {
-    "type": "1",
-    "server": "",
-    "appId": "<your app id>",
-    "htmlPath": "./index.html",
-    "resourceFile": "./resources.json"
+  "devDependencies": {
+    "autoprefixer": "^7.2.4",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
+    "postcss-pxtorem": "^4.0.1"
   }
 }
