--- a/packages/ayano/package.json
+++ b/packages/ayano/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ayano",
-  "version": "1.0.0-alpha2",
+  "version": "1.0.0",
   "description": "a command to create react app",
   "scripts": {
     "build": "babel src -d lib --presets=es2015",
@@ -9,7 +9,7 @@
     "publish-pre": "npm publish --tag next"
   },
   "related": {
-    "ayano-script": "next"
+    "ayano-script": "1.0.0"
   },
   "bin": "bin/index.js",
   "main": "lib/index.js",
